# prototype

./: .gitignore  README.md  pyproject.toml
cascade/: __init__.py  cli.py  engine.py  graph.py  hkey.py  hooks.py  loader.py  model.py  naming.py  node_cli.py  plan.py  project.py  provisioning.py  runner.py  runners_config.py  store.py  store_config.py  types.py  validate.py
cascade/cli/: __init__.py  authoring.py  node.py  provisioning.py  query.py  run.py  store.py  utils.py  validate.py
cascade/engine/runner/: handle.py  run_spec.py  run_status.py  runner.py  runner_coro.py  runner_docker.py  runner_subprocess.py
cascade/model/: dag.py  dag_node.py  dependency.py  pipeline.py  ref_data.py  refs.py  runnable.py  runner_kinds.py  runner_overrides.py  types.py
cascade/plan/: build.py  compile.py  elaborate.py  graph.py  integrity.py  plan.py  run_config.py  signature.py  slice.py  type_env.py  validate.py
cascade/runner/: __init__.py  base.py  echo.py  ecs_task.py  hooked.py  registry.py  subdag_local.py  subprocess.py
cascade/store/: __init__.py  base.py  file_store.py  registry.py  s3_store.py
tests/engine/: test_runner_coro.py  test_smoke.py  test_subprocess.py
tests/model/: test_pipeline_decode.py
tests/store/: test_smoke.py
