[project]
name = "cascade-pdl"
version = "0.1.0"
description = ""
authors = [
    {name = "Lorenzo Trojan",email = "ltrojan@wildersensing.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)"
]

[project.scripts]
cascade = "cascade.cli:main"

[tool.poetry]
packages = [{ include = "cascade" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.emacs]
optional = true
[tool.poetry.group.emacs.dependencies]
python-lsp-server = "^1.14.0"
debugpy = "^1.8.21"
rope = "^1.14.0"
pylsp-rope = "^0.1.17"
python-lsp-black = "^2.0.0"

